[package]
name = "rust-chat-server"
version = "0.1.0"
authors = ["Ayon Saha <ayonsaha2011@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-cors = "0.2.0"
actix-rt = "1.0.0"
actix-service = "1.0.1"
actix-web = "2.0.0"
argonautica = "0.2.0"
env_logger = "0.7.1"
log = "0.4.8"
lazy_static = "1.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.15.0"
failure = "0.1.1"
futures = "0.3.1"
derive_more = "0.15.0"
jsonwebtoken = "6.0.1"
time = "0.1.42"
cdrs = { version = "2.2.0", features=["v4"], default-features = false }
cdrs_helpers_derive = "0.3.0"
r2d2 = "0.8.2"
toml = "0.5.5"
rdkafka = "0.23.0"
r2d2_redis = "0.13"

[dependencies.chrono]
version = "0.4.9"
features = ["serde"]

[dependencies.uuid]
version = "0.7"
features = ["v4", "serde"]
